--- a/client/src/app/views/clinic/clinic.css
+++ b/client/src/app/views/clinic/clinic.css
@@ -1,17 +1,30 @@
-h1 {
-  color: white;
+.container {
+  display: flex;
+  flex-direction: column;
+  color: var(--mat-sys-on-background);
+  gap: 1rem;
+}
+
+h2 {
+  margin: 0;
+}
+
+.location {
+  display: flex;
+  gap: 5px;
+  margin-left: -3px;
+  align-items: center;
 }
 
 .map-container {
   position: relative;
   width: 100%;
-  height: 500px;
-  padding: 30px;
+  height: 400px;
   box-sizing: border-box;
 }
 
 .map-frame {
-  border-radius: var(--mat-sys-corner-large);
+  border-radius: var(--mat-sys-corner-medium);
   overflow: hidden;
   height: 100%;
   width: 100%;
@@ -19,4 +32,26 @@ h1 {
 
 #map {
   height: 100%;
+}
+
+.doctors {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  gap: 1rem;
+}
+
+.doctors > * {
+  width: 100%;
+}
+
+@media screen and (min-width: 992px) {
+  .doctors > * {
+    width: calc(50% - 0.5rem);
+  }
+
+  .map-container {
+    height: 500px;
+  }
 }
